--- a/Week2-0.ipynb
+++ b/Week2-0.ipynb
@@ -1,65 +1,60 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/mercury+json": {
+       "allow_download": true,
+       "code_uid": "App.0.40.25.5-randa064418d",
+       "continuous_update": true,
+       "description": "Lists, oh my!",
+       "full_screen": true,
+       "model_id": "mercury-app",
+       "notify": "{}",
+       "output": "app",
+       "schedule": "",
+       "show_code": true,
+       "show_prompt": false,
+       "show_sidebar": true,
+       "static_notebook": false,
+       "stop_on_error": false,
+       "title": "Week 2-0",
+       "widget": "App"
+      },
+      "text/html": [
+       "<h3>Mercury Application</h3><small>This output won't appear in the web app.</small>"
+      ],
+      "text/plain": [
+       "mercury.App"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "<img align=\"left\" src=\"https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/CC_BY.png\"><br />\n",
-    "\n",
-    "Created by [Nathan Kelber](http://nkelber.com) and Ted Lawless for [JSTOR Labs](https://labs.jstor.org/) under [Creative Commons CC BY License](https://creativecommons.org/licenses/by/4.0/)<br />\n",
-    "For questions/comments/improvements, email nathan.kelber@ithaka.org.<br />\n",
-    "___"
+    "# This allows me to display the notebook as slides.\n",
+    "import mercury as mr\n",
+    " \n",
+    "app = mr.App(title=\"Week 2-1\", description=\"Conditionals\", show_code = True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Basics 3\n",
+    "# The Key Terms for Friday\n",
     "\n",
-    "**Description:** \n",
-    "This lesson describes the basics of [lists](https://constellate.org/docs/key-terms/#list) and [dictionaries](https://constellate.org/docs/key-terms/#dictionary) including:\n",
-    "\n",
-    "* The `in` and `not in` [operators](https://constellate.org/docs/key-terms/#operator)\n",
-    "* [Lists](https://constellate.org/docs/key-terms/#list)\n",
-    "* [List](https://constellate.org/docs/key-terms/#list) methods (`index()`, `append()`, `insert()`, `sort()`)\n",
-    "* [Dictionaries](https://constellate.org/docs/key-terms/#dictionary)\n",
-    "* [Dictionary](https://constellate.org/docs/key-terms/#dictionary) methods (`update()`, `keys()`, `values()`, `items()`, `get()`)\n",
-    "\n",
-    "This is part 3 of 5 in the series *Python Basics* that will prepare you to do text analysis using the [Python](https://constellate.org/docs/key-terms/#python) programming language.\n",
-    "\n",
-    "**Use Case:** For Learners (Detailed explanation, not ideal for researchers)\n",
-    "\n",
-    "**Difficulty:** Beginner\n",
-    "\n",
-    "**Completion Time:** 90 minutes\n",
-    "\n",
-    "**Knowledge Required:** \n",
-    "* [Getting Started with Jupyter Notebooks](./getting-started-with-jupyter.ipynb)\n",
-    "* [Python Basics 1](./python-basics-1.ipynb)\n",
-    "* [Python Basics 2](./python-basics-2.ipynb)\n",
-    "\n",
-    "**Knowledge Recommended:** None\n",
-    "\n",
-    "**Data Format:** None\n",
-    "\n",
-    "**Libraries Used:** None\n",
-    "\n",
-    "**Research Pipeline:** None\n",
-    "___"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In *Python Basics 1*, we learned about three data types: [integers](https://constellate.org/docs/key-terms/#integer), [floats](https://constellate.org/docs/key-terms/#float), and [strings](https://constellate.org/docs/key-terms/#string). In this lesson, we will learn about two additional data types: [lists](https://constellate.org/docs/key-terms/#list) and [dictionaries](https://constellate.org/docs/key-terms/#dictionary). [Lists](https://constellate.org/docs/key-terms/#list) and [dictionaries](https://constellate.org/docs/key-terms/#dictionary) help us store many values inside a single [variable](https://constellate.org/docs/key-terms/#variable). This is helpful for a few reasons.\n",
-    "\n",
-    "* We can store many items in a single [list](https://constellate.org/docs/key-terms/#list) or [dictionary](https://constellate.org/docs/key-terms/#dictionary), making it easier to keep the data together\n",
-    "* [Lists](https://constellate.org/docs/key-terms/#list) and [dictionaries](https://constellate.org/docs/key-terms/#dictionary) only require a single [assignment statement](https://constellate.org/docs/key-terms/#assignment-statement)\n",
-    "* [Lists](https://constellate.org/docs/key-terms/#list) and [dictionaries](https://constellate.org/docs/key-terms/#dictionary) have additional capabilities that will make organizing our data easier\n",
-    "\n",
-    "The fundamental difference between a [list](https://constellate.org/docs/key-terms/#list) and a [dictionary](https://constellate.org/docs/key-terms/#dictionary) is that a [list](https://constellate.org/docs/key-terms/#list) stores items in sequential order (starting from 0) while a [dictionary](https://constellate.org/docs/key-terms/#dictionary) stores items in [key/value pairs](https://constellate.org/docs/key-terms/#key-value-pair). When we want to retrieve an item in a list, we use an [index number](https://constellate.org/docs/key-terms/#index-number) or a set of [index numbers](https://constellate.org/docs/key-terms/#index-number) called a [slice](https://constellate.org/docs/key-terms/#slice) as a reference. When we want to retrieve an item from a [dictionary](https://constellate.org/docs/key-terms/#dictionary), we supply a [key](https://constellate.org/docs/key-terms/#key-value-pair) that returns the [value](https://constellate.org/docs/key-terms/#key-value-pair) (or set of values) associated with that [key](https://constellate.org/docs/key-terms/#key-value-pair). Each of these approaches can be beneficial depending on what kind of data we are working with (and what we intend to do with the data)."
+    "* list\n",
+    "* index\n",
+    "* slice\n",
+    "* ```in``` and ```not in``` operators\n",
+    "* method\n",
+    "* list methods: ```index(), append(), insert(), sort()```"
    ]
   },
   {
@@ -68,8 +63,67 @@
    "source": [
     "## Lists\n",
     "\n",
-    "A [list](https://constellate.org/docs/key-terms/#list) can store anywhere from zero to millions of items. The items that can be stored in a [list](https://constellate.org/docs/key-terms/#list) include the data types we have already learned: [integers](https://constellate.org/docs/key-terms/#integer), [floats](https://constellate.org/docs/key-terms/#float), and [strings](https://constellate.org/docs/key-terms/#string). A [list](https://constellate.org/docs/key-terms/#list) [assignment statement](https://constellate.org/docs/key-terms/#assignment-statement) takes the form.\n",
-    "`my_list = [item1, item2, item3, item4...]`"
+    "A **list** is a collection of items stored in order. For example, you can make a list of:\n",
+    "* integers\n",
+    "* floating point numbers\n",
+    "* strings\n",
+    "* tokens\n",
+    "\n",
+    "In fact, you have already been working with lists in your projects. With spaCy, each document contains a list of tokens.\n",
+    "\n",
+    "A list can even contain items of more than one data type!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make a list, we use ```[``` at the start and ```]``` at the end. We separate list items using ```,```. In the code cell below, type ```[1, 2, 3]``` to make a list containing the integers 1, 2, and 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a list containing 1, 2 and 3\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can assign a list to be the value of a variable. In the code cell below, assign the list ```[1, 2, 3]``` to the variable ```my_list```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign the list containing 1, 2 and 3 to the variable my_list\n",
+    "\n",
+    "# Print my_list\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also assign a variable to an empty list (one that contains no items). The empty list is ```[]```. In the code cell below, assign the variable ```empty_list``` to the empty list."
    ]
   },
   {
@@ -78,20 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A list containing integers\n",
-    "my_favorite_numbers = [7, 21, 100]\n",
-    "print(my_favorite_numbers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A list containing strings\n",
-    "my_inspirations = ['Harriet Tubman', 'Rosa Parks', 'Pauli Murray']\n",
-    "print(my_inspirations)"
+    "# Assign empty_list to an empty list\n",
+    "\n",
+    "# Print empty_list"
    ]
   },
   {
@@ -1576,7 +1619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.8"
   },
   "toc": {
    "base_numbering": 1,
