--- a/Week2-2.ipynb
+++ b/Week2-2.ipynb
@@ -53,6 +53,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Flow Control Statements\n",
+    "\n",
+    "So far you have learned about **expressions** (made up of **operators** and **operands**), **variables**, and the python data types **int**, **float** and **string**. You have also learned about some python **functions**. \n",
+    "\n",
+    "So far, you have written one line of python code at a time. Each line of code does one thing. If you want to do more than one thing, you write multiple lines of code one after the other, and they **execute** (or run) in order. But what if you want to execute one or more lines of code more often, or only if a particular condition holds? For example, what if you have a variable ```text``` (assigned to a string) and a variable ```times``` (assigned to an integer) and you want to print the value of ```text``` the value of ```times``` times, but only if the value of ```times``` is even? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[![Python Basics 2 image](https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/video/python-basics-2.png)](https://www.youtube.com/watch?v=yzApQqZkJ2c)"
    ]
   },
