--- a/Week2-1.ipynb
+++ b/Week2-1.ipynb
@@ -21,17 +21,21 @@
     "* boolean\n",
     "* comparison operator\n",
     "* boolean operator\n",
-    "* `if` statements\n",
-    "* `else` statements\n",
-    "* `elif` statements\n",
-    "* Handling errors with `try` and `except`"
+    "* flow control statement\n",
+    "* conditional statements: ```if```, ```else``` and ```elif```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Booleans\n",
+    "# Booleans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "So far we have learned about three basic python data types: **integer**, **floating point number** and **string**. But we have also learned about ```==``` and ```!=```, which return ```True``` or ```False```. The values ```True``` and ```False``` are the only values that are part of the python data type **boolean**.\n",
     "\n",
@@ -99,13 +103,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Comparison Operators"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparison Operators\n",
+    "\n",
     "Now that we have a way to store integers, floats, strings and booleans in variables, we can use **comparison operators** to make decisions based on those values. An **expression** that uses a **comparison operator** will return a **boolean** value."
    ]
   },
@@ -177,14 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is where the \"= python gotcha\" will get you. If you use ```=``` in a conditional expression when you meant to use ```==```, you might get an exception, or your code may not work as you expect it to."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By the way, you can also use a comparison operator with variables. In the code cell below, assign the variable ```first``` to the value ```1```. Assign the variable ```second``` to the value ```2```. Then type ```first > second```."
+    "You can also use a comparison operator with variables. In the code cell below, assign the variable ```first``` to the value ```1```. Assign the variable ```second``` to the value ```2```. Then type ```first > second```."
    ]
   },
   {
@@ -204,7 +203,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Boolean Operators (and/or/not)\n",
+    "This is where the \"= python gotcha\" will get you. If you use ```=``` in a conditional expression when you meant to use ```==```, you might get an exception, or your code may not work as you expect it to."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Boolean Operators (and/or/not)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Sometimes you will want to create complex conditional expressions. For example, maybe you want to print out a number only if:\n",
     "* it is even *and* a multiple of five\n",
@@ -354,22 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order for an expression using the ```not```  operator to evaluate to ```True```, no condition must be ```True```. Fill in the \"Truth Table\" for every pair:\n",
-    "|    Expression |    Evaluation |    \n",
-    " |    --- |    --- |    \n",
-    " |    True and not True |     |    \n",
-    " |    True and not False |     |    \n",
-    " |    False and not True |     |    \n",
-    " |    False and not False |     | \n",
-    "\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```not``` can also be used on its own; in this case it takes only one operand. In the code cell below, type ```not True```."
+    "```not``` takes only one operand. In the code cell below, type ```not True```. "
    ]
   },
   {
@@ -385,6 +382,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Of course, you can combine ```not``` with ```and```, as we did earlier.\n",
+    "\n",
     "So far, we have evaluated one or two conditions at once, but we could compare even more at the same time.  Boolean operators also have an order of operations like mathematical operators: they resolve in the order of `not`, `and`, then `or`. However, if you find yourself writing very complex conditional expressions, take a step back: is there a way to do what you want to do while writing code that is easier to understand?"
    ]
   },
@@ -392,7 +391,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flow Control Statements\n",
+    "# Flow Control Statements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "So far, you have written one line of python code at a time. Each line of code does one thing. If you want to do more than one thing, you write multiple lines of code one after the other, and they **execute** (or run) in order. But what if you want to execute one or more lines of code only if a particular condition holds? For example, what if you have a variable ```text``` (assigned to a string) and you want to print out the value of ```text``` only if it is equal to \"iPhone\"? \n"
    ]
@@ -402,9 +407,41 @@
    "metadata": {},
    "source": [
     "\n",
-    "We can control when or if code gets executed using **flow control statements** called **conditional statements** (or just conditionals). Flow control statements are core parts of the python programming language. Conditionals are flow control statements that correspond to English language statements like:\n",
+    "We can control when or if code gets executed using **flow control statements** called **conditional statements** (or just conditionals). Flow control statements are core parts of the python programming language. The general structure of a flow control statement is:\n",
+    "\n",
+    "`flow control statement:`<br />\n",
+    "&nbsp; &nbsp; &nbsp; &nbsp;`code block`\n",
+    "\n",
+    "The flow control statement is followed by a ':'. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code Blocks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A **code block** is a snippet of code that begins with an indentation. A code block can contain one line of code (one action) or multiple lines of code. \n",
+    "\n",
+    "A code block can contain another code block (further indented). \n",
+    "\n",
+    "A code block ends when the indentation becomes less. \n",
+    "\n",
+    "![Visualization of code block indentations](https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/code_block_indentation.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conditionals** are flow control statements that correspond to English language statements like:\n",
     "* *if the text is iPhone, print it*\n",
-    "* *when the value of ```count``` is an even number, add one to it*\n",
+    "* *when the value of the variable ```count``` is an even number, add one to it*\n",
     "* *if ```count``` is even, print it, otherwise (else) add one to it*\n",
     "\n",
     "At the core of a conditional is a statement that evaluates to a **boolean** value:\n",
@@ -417,7 +454,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Writing a Conditional Statement\n",
+    "# Conditional Statements\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "The general form of a conditional statement in python is a condition followed by an action clause:\n",
     "\n",
@@ -434,18 +477,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Code Blocks\n",
-    "\n",
-    "A **code block** is a snippet of code that begins with an indentation. A code block can contain one line of code (one action) or multiple lines of code. A code block can contain another code block (further indented). A code block ends when the indentation becomes less. \n",
-    "\n",
-    "![Visualization of code block indentations](https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/code_block_indentation.png)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "This is where that \"white space python gotcha\" will get you. \n",
     "* Since the level of indentation describes which code block will be executed, improper indentations will make your code crash. \n",
     "* If you accidentally indent too much or not enough, your program will not behave as you expect it too. \n",
@@ -456,7 +487,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Types of Conditional Statements\n",
+    "## Types of Conditional Statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "The code example above uses an `if` statement, but there are other kinds of conditional statement in python.\n",
     "\n",
@@ -473,19 +510,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `if` Statements\n",
+    "### `if` Statements\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "An `if` statement begins with an expression that evaluates to  ```True``` or  ```False```.\n",
     "\n",
     "* if  ```True```, then perform this action\n",
     "* if  ```False```, skip over this action\n",
     "\n",
-    "In practice, the form looks like this:\n",
-    "\n",
-    "`if this is True:` <br />\n",
-    "&nbsp; &nbsp; &nbsp; &nbsp; `perform this action`\n",
-    "\n",
-    "Let's put an `if` statement into practice with a very simple program that asks the user how their day is going and then responds. We can visualize the flow of the program in a flowchart.\n",
+    "Let's write some code that asks the user how their day is going and then responds. We can visualize the flow of the program in a flowchart.\n",
     "\n",
     "![Flowchart of a good day program](https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/good_day_flowchart.png)\n",
     "\n",
@@ -506,17 +544,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our program works fairly well so long as the user inputs 'Yes' or 'yes'. If they type 'no' or something else, it simply ends. If we want to have our program still respond, we can use an `else` statement."
+    "### `else` Statements"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `else` Statements\n",
+    "\n",
+    "The code above for `if` statements works well as long as the user inputs 'Yes' or 'yes'. If they type 'no' or something else, it simply ends. If we want to have our program still respond, we can use an `else` statement.\n",
     "\n",
     "An `else` statement *does not require a condition* to evaluate to  ```True``` or  ```False```. It simply executes when none of the previous conditions are met. The form looks like this:\n",
     "\n",
@@ -526,7 +572,8 @@
     "Our updated flowchart now contains a second branch for our program.\n",
     "\n",
     "![The program flowchart with two branches](https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/good_day_flowchart2.png)\n",
-    "    \n"
+    "    \n",
+    "In the code cell below, copy your code from the previous code cell and add an `else` statement."
    ]
   },
   {
@@ -535,13 +582,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A program that responds to whether the user is having a good or bad day\n",
-    "having_good_day = input('Are you having a good day? (Yes or No) ') # Define a variable having_good_day to hold the user's input\n",
-    "\n",
-    "if having_good_day == 'Yes' or having_good_day == 'yes': # If the user has input the string 'Yes' or 'yes'\n",
-    "    print('Glad to hear your day is going well!') # Print: Glad to hear your day is going well!\n",
-    "    \n",
-    "# Write an else statement here\n"
+    "# Add an else statement\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `elif` Statements\n"
    ]
   },
   {
@@ -555,7 +603,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `elif` Statements\n",
     "\n",
     "An `elif` statement, short for \"else if,\" allows us to create a list of possible conditions where one (and only one) action will be executed. `elif` statements come after an initial `if` statement and before an `else` statement:\n",
     "\n",
@@ -572,50 +619,56 @@
     "\n",
     "For example, we could add an `elif` statement to our program so it responds to both \"Yes\" and \"No\" with unique answers. We could then add an `else` statement that responds to any user input that is not \"Yes\" or \"No\".\n",
     "\n",
-    "![Flowchart showing three branches](https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/good_day_flowchart3.png)"
+    "![Flowchart showing three branches](https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/good_day_flowchart3.png)\n",
+    "\n",
+    "In the code cell below, copy your code from the previous code cell and insert an `elif` statement for ```having_good_day == 'No```. Remmeber to capture the case of ```having_good_day == 'no'``` also!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A program that responds to whether the user is having a good or bad day\n",
-    "having_good_day = input('Are you having a good day? (Yes or No) ') # Define a variable having_good_day to hold the user's input\n",
-    "\n",
-    "if having_good_day == 'Yes' or having_good_day == 'yes': # If the user has input the string 'Yes' or 'yes'\n",
-    "    print('Glad to hear your day is going well!') # Print: Glad to hear your day is going well!\n",
-    "\n",
-    "# Write an elif statement for having_good_day == 'No'\n",
-    "\n",
-    "\n",
-    "# An else statement that catches if the answer is not 'yes' or 'no'\n",
-    "else: # Execute this if none of the other branches executes\n",
-    "    print('Sorry, I only understand \"Yes\" or \"No\"') # Note that we can use double quotations in our string because it begins and ends with single quotes"
+    "# Add an elif statement"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The difference between`elif` and `if`?\n",
+    "### What is the difference between `elif` and `if`?\n",
     "\n",
-    "When an `elif` condition is met, all other `elif` statements are skipped over. This means that one (and only one) [flow control statement](https://constellate.org/docs/key-terms/#flow-control-statement) is executed when using `elif` statements. The fact that only one `elif` statement is executed is important because it may be possible for multiple [flow control statements](https://constellate.org/docs/key-terms/#flow-control-statement) to evaluate to  ```True```. A series of `elif` statements evaluates from top-to-bottom, only executing the first `elif` statement whose condition evaluates to  ```True```. The rest of the `elif` statements are skipped over (whether they are  ```True``` or  ```False```).\n",
+    "When an `elif` condition is met, all other `elif` statements are skipped over. However, multiple `elif` statements in a series of `elif` statements may evaluat to  ```True```. A series of `elif` statements evaluates from top-to-bottom, *only executing the first `elif`* statement whose condition evaluates to  ```True```. The rest of the `elif` statements are skipped over (whether they are  ```True``` or  ```False```).\n",
     "\n",
-    "In practice, a set of mutually exclusive `if` statements will result in the same actions as an `if` statement followed by `elif` statements. There are a few good reasons, however, to use `elif` statements:\n",
+    "Anytime you see a series of `elif` statements, they *could have been written* as a series of mutually exclusive `if` statements. Here are some reasons to use `elif` statements:\n",
     "\n",
     "1. A series of `elif` statements helps someone reading your code understand that a single flow control choice is being made.\n",
     "2. Using `elif` statements will make your program run faster since other conditional statements are skipped after the first evaluates to  ```True```. Otherwise, every `if` statement has to be evaluated before the program moves to the next step.\n",
     "3. Writing a mutually exclusive set of `if` statements can be very complex.\n",
     "\n",
-    "In the previous code cell, try changing the `elif` to an `if`. Then answer the question with a \"Yes.\" You'll receive two responses! Why do you think that is?"
+    "In the code cell below, copy your code from the previous code cell and change the `elif` statement to `if`. What happens when you run this? Why?"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1"
+   ]
   }
  ],
  "metadata": {
