--- a/Week2-0.ipynb
+++ b/Week2-0.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Key Terms for Monday\n",
+    "# The Key Terms for Friday\n",
     "\n",
     "* boolean\n",
     "* comparison operator\n",
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `if` Statements\n"
+    "## `if` Statements\n"
    ]
   },
   {
@@ -554,7 +554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `else` Statements"
+    "## `else` Statements"
    ]
   },
   {
@@ -589,7 +589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `elif` Statements\n"
+    "## `elif` Statements\n"
    ]
   },
   {
@@ -637,7 +637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What is the difference between `elif` and `if`?\n",
+    "## What is the difference between `elif` and `if`?\n",
     "\n",
     "When an `elif` condition is met, all other `elif` statements are skipped over. However, multiple `elif` statements in a series of `elif` statements may evaluat to  ```True```. A series of `elif` statements evaluates from top-to-bottom, *only executing the first `elif`* statement whose condition evaluates to  ```True```. The rest of the `elif` statements are skipped over (whether they are  ```True``` or  ```False```).\n",
     "\n",
