--- a/Week2-1.ipynb
+++ b/Week2-1.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flow Control Statements\n",
+    "# Flow Control Statements\n",
     "\n",
     "So far you have learned about **expressions** (made up of **operators** and **operands**), **variables**, and the python data types **int**, **float** and **string**. You have also learned about some python **functions**. \n",
     "\n",
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Types of Iteration Statement\n",
+    "# Types of Iteration Statement\n",
     "\n",
     "The code example above uses an `if` statement, but there are other kinds of [flow control statements](https://constellate.org/docs/key-terms/#flow-control-statement) available in [Python](https://constellate.org/docs/key-terms/#python).\n",
     "\n",
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `while` Loop Statements\n",
+    "## `while` Loop Statements\n",
     "\n",
     "So far, we have used [flow control statements](https://constellate.org/docs/key-terms/#flow-control-statement) like decision-making branches to decide what action should be taken next. Sometimes, however, we want a particular action to loop (or repeat) until some condition is met. We can accomplish this with a `while` loop statement that takes the form:\n",
     "\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Stopping Accidental Infinite Loops\n",
+    "## Stopping Accidental Infinite Loops\n",
     "When using a `while` loop, it is possible to accidentally create an infinite loop that never ends. This happens because the `while` condition *never* becomes **False**. \n",
     "\n",
     "If you accidentally write code that infinitely repeats, you can stop the execution by selecting **Interrupt** from the **Kernel** menu. (Alternatively, you can press the letter **i** twice on your keyboard.) It is also a good idea to remove the output of the rogue cell. You can do this from the **Cell** menu.\n",
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A Repeating `while` Loop\n",
+    "## A Repeating `while` Loop\n",
     "\n",
     "In the program above, the `while` loop checked to see if the user guessed a particular number. We could also use a `while` loop to repeat a [code block](https://constellate.org/docs/key-terms/#code-block) a particular number of times."
    ]
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `for` Loop Statements with a `range()` Function\n",
+    "## `for` Loop Statements with a `range()` Function\n",
     "\n",
     "An abbreviated way to write a `while` loop that repeats a specified number of times is using a `for` loop with a `range()` function. This loop takes the form:\n",
     "\n",
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `Continue` and `Break` Statements\n",
+    "# `Continue` and `Break` Statements\n",
     "`while` loops and `for` loops can also use `continue` and `break` statements to affect flow control. \n",
     "* A `continue` statement immediately restarts the loop.\n",
     "* A `break` statement immediately exits the loop.\n",
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exception Handling with `try` and `except`\n",
+    "# Exception Handling with `try` and `except`\n",
     "\n",
     "When running code that may create an error, we can use `try` and `except` statements to stop a program from crashing."
    ]
