--- a/Week2-1.ipynb
+++ b/Week2-1.ipynb
@@ -3,13 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# This allows me to display the notebook as slides.\n",
     "import mercury as mr\n",
     " \n",
-    "app = mr.App(title=\"Week 2-1\", description=\"Conditionals\", show_code = True)"
+    "app = mr.App(title=\"Week 2-1\", description=\"Flow Control Statements\", show_code = True)"
    ]
   },
   {
@@ -173,7 +179,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -509,7 +515,7 @@
     "tags": []
    },
    "source": [
-    "# Iteration Statements"
+    "# Loops"
    ]
   },
   {
@@ -807,7 +813,7 @@
     "tags": []
    },
    "source": [
-    "# `Continue` and `Break` Statements"
+    "## `Continue` and `Break` Statements"
    ]
   },
   {
@@ -815,62 +821,72 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "subslide"
     },
     "tags": []
    },
    "source": [
     "\n",
     "`while` loops and `for` loops can also use `continue` and `break` statements to affect flow control. \n",
-    "* A `continue` statement immediately restarts the loop.\n",
+    "* A `continue` statement immediately restarts the loop, skipping any remaining code in the current code block.\n",
     "* A `break` statement immediately exits the loop.\n",
     "\n",
-    "Let's return to our secret number guessing program. We will write the same program workflow using `continue` and `break` statements.\n",
-    "\n",
-    "![Flowchart for secret number guessing program](https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/guess_number_flowchart.png)"
+    "In the code cell below, copy the code from the `while` statement code cell. Change the `while` conditional expression to be `True`. Use `continue` and/or `break` to achieve the same behavior as the original `while` loop."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# A program that asks the user to guess a number\n",
-    "\n",
-    "# Initialize the variables `guess` and `secret_number`\n",
-    "guess = 0\n",
-    "secret_number = str(4) # The secret number is set here by the programmer. Notice it is turned into a string so it can be easily compared with user inputs.\n",
-    "\n",
-    "# Ask the user to make a guess\n",
-    "print('I am thinking of a number between 1 and 10.') \n",
-    "\n",
-    "# Test whether the user guess matches `secret_number`\n",
-    "while True:\n",
-    "    guess = input('What is your guess? ')\n",
-    "    if guess == secret_number:\n",
-    "        break\n",
-    "    else:\n",
-    "        continue\n",
-    "        \n",
-    "        \n",
-    "# After loop ends, print a congratulations message with the secret number       \n",
-    "print('You guessed the secret number, ' + secret_number) "
+    "# Ask whether the user is having a good day, until they say 'Yes' (or 'yes'), using while, continue and break\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
-    "# Exception Handling with `try` and `except`\n",
+    "# Exception Handling with `try` and `except`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "Do you hate exceptions?\n",
     "\n",
-    "When running code that may create an error, we can use `try` and `except` statements to stop a program from crashing."
+    "When running code that may create an error, we can use `try` and `except` statements to stop a program from making (\"throwing\") an exception."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Try running the first code block, if there's an error then run the `except` code\n",
@@ -886,52 +902,80 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "source": [
-    "___\n",
-    "<h2 style=\"color:red; display:inline\">Coding Challenge! &lt; / &gt; </h2>\n",
+    "# Bonus! Coding Challenge\n",
     "\n",
-    "**Using your knowledge of flow control statements, can you write a program that asks a user for their name, then prints out a response depending on whether they are old enough to drive? Check the end of this notebook for example solutions.**\n",
-    "___"
+    "Using your knowledge of flow control statements, can you write a program that asks a user for their name, then prints out a response depending on whether they are old enough to drive? Check the end of this notebook for example solutions?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Level 1 Challenge\n",
     "\n",
     "# Ask the user for their name and store it in a variable `user_name`\n",
+    "\n",
     "# Ask the user for their age and store it in a variable `user_age`\n",
+    "\n",
     "# Write an if, elif, else statement that checks to see if the user is driving age.\n",
+    "\n",
     "# If the user is driving age, print out \"user_name is old enough to drive.\"\n",
-    "# If the user is not driving age, print out \"user_name is not old enough to drive.\""
+    "\n",
+    "# If the user is not driving age, print out \"user_name is not old enough to drive.\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Level 2 Challenge\n",
     "\n",
     "# Improve your flow control to consider whether the user has input a realistic age\n",
+    "\n",
     "# If the user inputs an age over 120, print \"Is `user_name` a human or a turtle?\"\n",
+    "\n",
     "# If the user inputs an age less than 5, print \"`user_name` is not even ready for a bicycle!\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Level 3 Challenge\n",
-    "# A program that checks to see if a user is old enough to drive.\n",
-    "# Verifies user has input a number and it is realistic.\n",
+    "\n",
+    "# Build on the Level 1 or Level 2 Challenge\n",
     "\n",
     "# Find a solution to address when a user enters text that is not a number."
    ]
@@ -939,15 +983,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Level 4 Challenge\n",
-    "# A program that checks to see if a user is old enough to drive.\n",
-    "# It checks to see whether the age entered is a valid number. \n",
-    "# It also checks to see whether the age entered \n",
-    "# is a realistic number (greater than 0 and less than 150)\n",
-    "# If the user enters an age that is not a number or unrealistic, it prompts for a new age"
+    "\n",
+    "# Build on the Level 3 Challenge\n",
+    "\n",
+    "# If the user enters an age that is not a number or unrealistic, prompt for a new age"
    ]
   }
  ],
