--- a/Week2-1.ipynb
+++ b/Week2-1.ipynb
@@ -28,26 +28,6 @@
     "tags": []
    },
    "source": [
-    "# The Key Terms for Monday\n",
-    "\n",
-    "* flow control statement\n",
-    "* conditional statements: ```if```, ```else``` and ```elif```\n",
-    "* iteration (loop) statements: ```while``` and ```for```\n",
-    "* getting out of loops: ```continue``` and ```break```\n",
-    "* exception\n",
-    "* exception handling: ```try``` and ```except```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
     "# Flow Control Statements"
    ]
   },
@@ -62,7 +42,11 @@
    },
    "source": [
     "\n",
-    "So far, you have written one line of python code at a time. Each line of code does one thing. If you want to do more than one thing, you write multiple lines of code one after the other, and they **execute** (or run) in order. But what if you want to execute one or more lines of code only if a particular condition holds? For example, what if you have a variable ```text``` (assigned to a string) and you want to print out the value of ```text``` only if it is equal to \"iPhone\"? \n"
+    "So far, you have written one line of python code at a time. Each line of code does one thing. If you want to do more than one thing, you write multiple lines of code one after the other, and they **execute** (or run) in order. But what if you want to execute one or more lines of code only if a particular condition holds? For example, what if you have a variable ```text``` (assigned to a string) and you want to print out the value of ```text``` only if it is equal to \"iPhone\"? \n",
+    "\n",
+    "Today we will learn about two types of flow control statement:\n",
+    "* conditionals\n",
+    "* loops\n"
    ]
   },
   {
@@ -214,7 +198,7 @@
    },
    "source": [
     "\n",
-    "The code example above uses an `if` statement, but there are other kinds of conditional statement in python.\n",
+    "Here are the types of conditional statement in python:\n",
     "\n",
     "|Statement|Means|Condition for execution|\n",
     "|---|---|---|\n",
@@ -252,8 +236,17 @@
     "An `if` statement begins with an expression that evaluates to  ```True``` or  ```False```.\n",
     "\n",
     "* if  ```True```, then perform this action\n",
-    "* if  ```False```, skip over this action\n",
-    "\n",
+    "* if  ```False```, skip over this action\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Let's write some code that asks the user how their day is going and then responds. We can visualize the flow of the program in a flowchart.\n",
     "\n",
     "![Flowchart of a good day program](https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/good_day_flowchart.png)\n",
@@ -273,11 +266,13 @@
    },
    "outputs": [],
    "source": [
-    "# A program that responds to a user having a good day\n",
-    "having_good_day = input('Are you having a good day? (Yes or No) ') # Define a variable having_good_day to hold the user's input in a string\n",
+    "# Define a variable having_good_day to hold the user's input in a string\n",
+    "having_good_day = input('Are you having a good day? (Yes or No) ') \n",
     "\n",
-    "if having_good_day == 'Yes' or having_good_day == 'yes':  # If the user has input the string 'Yes' or 'yes'\n",
-    "    print('Glad to hear your day is going well!') # Print: Glad to hear your day is going well!"
+    "# If the user has input the string 'Yes' or 'yes'\n",
+    "if having_good_day == 'Yes' or having_good_day == 'yes':  \n",
+    "    # Print: Glad to hear your day is going well!\n",
+    "    print('Glad to hear your day is going well!') "
    ]
   },
   {
@@ -341,7 +336,17 @@
     "\n",
     "`else:` <br />\n",
     "&nbsp; &nbsp; &nbsp; &nbsp; `perform this action`\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Our updated flowchart now contains a second branch for our program.\n",
     "\n",
     "![The program flowchart with two branches](https://ithaka-labs.s3.amazonaws.com/static-files/images/tdm/tdmdocs/good_day_flowchart2.png)"
@@ -423,7 +428,17 @@
     "`elif condition D is True:` <br />\n",
     "&nbsp; &nbsp; &nbsp; &nbsp; `perform action D` <br />\n",
     "`else:` <br />\n",
-    "&nbsp; &nbsp; &nbsp; &nbsp;`perform action E`\n",
+    "&nbsp; &nbsp; &nbsp; &nbsp;`perform action E`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "\n",
     "For example, we could add an `elif` statement to our program so it responds to both \"Yes\" and \"No\" with unique answers. We could then add an `else` statement that responds to any user input that is not \"Yes\" or \"No\".\n",
     "\n",
@@ -640,8 +655,9 @@
    "source": [
     "When using a `while` loop, it is possible to accidentally create an infinite loop that never ends. This happens because the `while` condition *never* becomes **False**. \n",
     "\n",
-    "If you accidentally write code that infinitely repeats, you can stop the execution by selecting **Interrupt** from the **Kernel** menu. (Alternatively, you can press the letter **i** twice on your keyboard.) It is also a good idea to remove the output of the rogue cell. You can do this from the **Cell** menu.\n",
-    "* Clearing output from a single cell: **Cell** ▶ **Current Outputs** ▶ **Clear**"
+    "If you accidentally write code that infinitely repeats, you can stop the execution by selecting **Interrupt** from the **Kernel** menu. \n",
+    "\n",
+    "If you can't figure out where the code has \"gone wrong\", in Visual Studio you can use the \"Run By Line\" functionality to go slowly through and check things."
    ]
   },
   {
@@ -657,11 +673,14 @@
    "outputs": [],
    "source": [
     "# Run this infinite loop then interrupt the kernel\n",
-    "from time import sleep # Importing the sleep module so we can slow down our infinite loop\n",
+    "\n",
+    "# Importing the sleep module so we can slow down our infinite loop\n",
+    "from time import sleep \n",
     "\n",
     "while True:\n",
     "    print('Oh noes!')\n",
-    "    sleep(1) # A one second pause so our infinite loop doesn't make the notebook gigantic!"
+    "    # A one second pause so our infinite loop doesn't make the notebook gigantic!\n",
+    "    sleep(5) "
    ]
   },
   {
