--- a/Week2-2.ipynb
+++ b/Week2-2.ipynb
@@ -851,6 +851,7 @@
     "\n",
     "Questions:\n",
     "* *We now know four basic python data types (int, float, string, boolean) and one complex python data type (list). Which simple data type seems most like list?*\n",
+    "* *Can we slice into strings the same way we can lists? Use the code cell below to try.*\n",
     "* *Do the list operators work on that simple python data type? Use the code cell below to try.*"
    ]
   },
