--- a/Week2-3.ipynb
+++ b/Week2-3.ipynb
@@ -130,6 +130,75 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Coding Exercise: Flow Control Statements\n",
+    "\n",
+    "Question 6: *Using your knowledge of flow control statements, can you write code that asks a user for their name, then prints out a response depending on whether they are old enough to drive?*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Level 1 Challenge\n",
+    "\n",
+    "# Ask the user for their name and store it in a variable `user_name`\n",
+    "\n",
+    "# Ask the user for their age and store it in a variable `user_age`\n",
+    "\n",
+    "# Write an if, elif, else statement that checks to see if the user is driving age.\n",
+    "\n",
+    "# If the user is driving age, print out \"user_name is old enough to drive.\"\n",
+    "\n",
+    "# If the user is not driving age, print out \"user_name is not old enough to drive.\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Level 2 Challenge\n",
+    "\n",
+    "# Improve your flow control to consider whether the user has input a realistic age\n",
+    "\n",
+    "# If the user inputs an age over 120, print \"Is `user_name` a human or a turtle?\"\n",
+    "\n",
+    "# If the user inputs an age less than 5, print \"`user_name` is not even ready for a bicycle!\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Level 3 Challenge\n",
+    "\n",
+    "# Build on the Level 1 or Level 2 Challenge\n",
+    "\n",
+    "# Find a solution to address when a user enters text that is not a number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Level 4 Challenge\n",
+    "\n",
+    "# Build on the Level 3 Challenge\n",
+    "\n",
+    "# If the user enters an age that is not a number or unrealistic, prompt for a new age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -186,7 +255,9 @@
    "source": [
     "# Resources\n",
     "\n",
-    "[Constellate tutorial](https://www.constellate.org/tutorials/) Python Basics 2 and Python Basics 3.\n"
+    "[Constellate tutorial](https://www.constellate.org/tutorials/) Python Basics 2 and Python Basics 3.\n",
+    "\n",
+    "[Python docs](https://docs.python.org/).\n"
    ]
   }
  ],
