--- a/Week2-3.ipynb
+++ b/Week2-3.ipynb
@@ -26,7 +26,7 @@
     "| slice   |            |     | \n",
     "| list operator  |            |     | \n",
     "| list function  |            |     | \n",
-    "| list method  |            |     | mon string functions."
+    "| list method  |            |     | "
    ]
   },
   {
@@ -126,7 +126,7 @@
     "tags": []
    },
    "source": [
-    "Question 5: *In python, what do we use to help us avoid throwing exceptions?*"
+    "Question 6: *In python, what do we use to help us avoid throwing exceptions?*"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "source": [
     "# Coding Exercise: Flow Control Statements\n",
     "\n",
-    "Question 6: *Using your knowledge of flow control statements, can you write code that asks a user for their name, then prints out a response depending on whether they are old enough to drive?*"
+    "Using your knowledge of flow control statements, can you write code that asks a user for their name, then prints out a response depending on whether they are old enough to drive?"
    ]
   },
   {
@@ -144,17 +144,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Level 1 Challenge\n",
+    "# Question 7\n",
     "\n",
     "# Ask the user for their name and store it in a variable `user_name`\n",
     "\n",
     "# Ask the user for their age and store it in a variable `user_age`\n",
     "\n",
-    "# Write an if, elif, else statement that checks to see if the user is driving age.\n",
+    "# Write an if, else statement that checks to see if the user is driving age.\n",
+    "## If the input the user is less than driving age, print \"user_name is not old enough to drive.\"\n",
     "\n",
-    "# If the user is driving age, print out \"user_name is old enough to drive.\"\n",
-    "\n",
-    "# If the user is not driving age, print out \"user_name is not old enough to drive.\"\n"
+    "## Else (they are driving age), print \"user_name is old enough to drive.\""
    ]
   },
   {
@@ -163,7 +162,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Level 2 Challenge\n",
+    "# Question 8\n",
+    "\n",
+    "# Build on Question 7\n",
     "\n",
     "# Improve your flow control to consider whether the user has input a realistic age\n",
     "\n",
@@ -178,11 +179,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Level 3 Challenge\n",
+    "# Question 9\n",
     "\n",
-    "# Build on the Level 1 or Level 2 Challenge\n",
+    "# Build on Question 8\n",
     "\n",
-    "# Find a solution to address when a user enters text that is not a number."
+    "# Find a solution to address when a user enters text that is not a number (hint: elif, or try/catch)"
    ]
   },
   {
@@ -191,11 +192,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Level 4 Challenge\n",
+    "# Question 10\n",
     "\n",
-    "# Build on the Level 3 Challenge\n",
+    "# Build on Question 9\n",
     "\n",
-    "# If the user enters an age that is not a number or unrealistic, prompt for a new age"
+    "# If the user enters an age that is not a number or unrealistic, prompt for a new age (hint: while)"
    ]
   },
   {
