--- a/Week2-2.ipynb
+++ b/Week2-2.ipynb
@@ -64,14 +64,13 @@
    },
    "source": [
     "A **list** is a collection of items stored in order. For example, you can make a list of:\n",
-    "* integers\n",
-    "* floating point numbers\n",
-    "* strings\n",
-    "* tokens\n",
+    "* simple python data types (integers, floating point numbers, strings, booleans)\n",
+    "* complex python data types (for example, other lists)\n",
+    "* data types from python packages (for example, spaCy tokens)\n",
     "\n",
     "In fact, you have already been working with lists in your projects. With spaCy, each document contains a list of tokens.\n",
     "\n",
-    "A list can even contain items of more than one data type! In fact, a list can even contain other lists!\n",
+    "A list can even contain items of more than one data type! \n",
     "\n",
     "Because a list can contain other data types, we call it a \"complex\" data type."
    ]
